less/app.less
/* ... */
.horizontal-center {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    -webkit-transform: translateX(-50%);
}

.center {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	-webkit-transform: translate(-50%, -50%);
}

html {
	font-size: 12px;

	@media screen and (min-width: @screen-sm){
		font-size: 14px;
	}

	@media screen and (min-width: @screen-md){
		font-size: 16px;
	}

	@media screen and (min-width: @screen-lg){
		font-size: 18px;
	}

	@media screen and (min-width: 1600px){
		font-size: 21px;
	}

	@media screen and (min-width: 1920px){
		font-size: 24px;
	}
}

.logo {
	display: block;
	position: absolute;
	left: 2rem;
	top: 2rem;
	z-index: 10;

	img {
		height: 2rem;
		width: auto;
	}
}

.slide-container {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	overflow: hidden;
}

.slide {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.slide-card-closed {
	background-image: url('../assets/elf1.jpg');
    background-size: cover;
    background-position: center center;

    .content-wrapper {
		.vertical-center;
    	position: absolute;
    	width: 100%;
    	text-align: center;
    }

	h1 {
		font-family: 'Gotham';
		text-align: center;
		color: #fff;
		font-size: @font-size-base * 3;
		text-shadow: rgba(0,0,0,0.7) 0 0 1rem;
	}

	.btn {
		text-transform: uppercase;
		.border-radius(0);
		border: none;
		margin-bottom: 1rem;
		letter-spacing: 0.1rem;

		margin-left: -33.3333%;
	}

	.headphones {
		color: #fff;
		margin-left: -33.3333%;
		text-transform: uppercase;
		letter-spacing: 0.1rem;
		font-size: @font-size-small;
		text-shadow: rgba(0,0,0,0.6) 0 0 5px;
	}
}

.slide-card-open {
	display: none;

	background-image: url('../assets/elf14.jpg');
    background-size: cover;
    background-position: center center;
}

.slide-credits {
	z-index: 50;
	overflow: scroll;
	-webkit-overflow-scrolling: touch;
	text-align: center;
	display: none;
	background: darken(fadeout(@green, 50%), 80%);

	.content-wrapper {
		padding: 4rem 1rem;
		max-width: 600px;
		margin: 0 auto;
		color: #fff;

		.share-prompt {
			font-size: @font-size-large;

			+ p .btn {
				.border-radius(0);
				text-transform: uppercase;
				letter-spacing: 0.2rem;
				margin-bottom: 2rem;
				margin-top: 2rem;

				+ p {
					margin-bottom: 4rem;
				}
			}
		}

		h2 {
			text-align: center;
			text-transform: uppercase;
			font-size: @font-size-large;
			letter-spacing: 0.2rem;
		}

		h3 {
			font-size: .875rem;
			text-transform: uppercase;
			font-family: 'Knockout 31 4r';
			letter-spacing: 0.1rem;
		}

		dl,
		p {
			font-size: @font-size-base * 0.875;
		}

		dl {
			clear: both;
			margin: 0;

			+ h3 {
				margin-top: 4rem;
			}
		}

		dd,
		dt {
			width: 50%;
		}

		dt {
			float: left;
			clear: left;
			text-align: right;
			padding-right: 0.5rem;
			font-weight: normal;
			text-transform: uppercase;
			letter-spacing: 0.1rem;
		}

		dd {
			float: right;
			clear: right;
			padding-left: 0.5rem;
			text-align: left;
		}

		.names {
			text-transform: uppercase;
			letter-spacing: 0.1rem;
			display: block;
		}

		.promo {
			margin-top: 4rem;
			margin-bottom: 4rem;
		}
	}
}

.covervid-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;

    video {
    	width: 100%;
    }
}

.filmstrip-outer-wrapper {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;

    .filmstrip-wrapper {
        width: 720px;
        height: 528px;

        .center;
    }

    .filmstrip {
        width: 100%;
        height: 100%;
        background-size: 1400% 100%;
        background-image: url('../assets/filmstrip.jpg');
        .backface-visibility(hidden);

        &.animated {
            .animation(filmstrip 0.7s 1 forwards);
        }

        &.done {
        	background-position: -1300% 0 !important;
        }
    }
}

.player {
	.transition(all 0.2s ease-in-out);
	.translate(0,100%);
	position: absolute;
	left: 0;
	right: 0;
	bottom: 0;
	height: 5rem;
	background: fadeout(#333, 20%);
	line-height: 5rem;

	&.slide-in {
		.translate(0,0);
	}

	.controls {
		vertical-align: middle;
		margin-right: @grid-gutter-width / 2;
		position: absolute;
		left: 0;
		top: 0;
		z-index: @z-player-controls;
	}

	.player-progress {
		position: absolute;
		left: 5rem;
		top: 0;
		bottom: 0;
		right: 0;

		.jp-seek-bar {
			height: 5rem;
			position: absolute;
			left: 0;
			top: 0;
			cursor: pointer;
		}

		.bar {
			position: absolute;
			height: 5rem;
			top: 0;
			bottom: 0;
			left: 0;
			background-color: fadeout(#999, 80%);
		}
	}
	.playback-info {
		top: 2rem;
		right: 1rem;
		text-align: right;
		line-height: 1;
		position: absolute;
	}

	.current-time {
		color: #fff;
		line-height: 1;
	}
}

.player-button,
.player-button:focus,
.player-button:visited,
.player-button:hover {
	display: block;
	.square(5rem);
	background: @primary-control;
	color: #fff;
	line-height: 5rem;
	text-align: center;
	font-size: @font-size-base * 3;


	.no-touch & {
		&:hover {
			color: #fff;
			background: lighten(@primary-control, 10%);
			text-decoration: none;
		}
	}

	.touch & {
		&:active {
			color: #fff;
			background: lighten(@primary-control, 10%);
			text-decoration: none;
		}
	}
}

.comment-drawer-toggle,
.comment-drawer-toggle:hover,
.comment-drawer-toggle.visited {
	position: absolute;
	z-index: 10;
	top: 2rem;
	right: 2rem;
	border: 1px solid #fff;
	color: #fff;
	.square(2rem);
	text-align: center;
	line-height: 2rem;
	vertical-align: middle;
	text-decoration: none;
	cursor: pointer;
}
/* ... */

